# LAB

./: .dockerignore  .env.example  .gitignore  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.fr.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py
docker/: docker-compose.light.yml  entrypoint.sh  setup-vps.sh
docker/nginx/: Dockerfile  nginx.conf
docker/nginx/conf.d/: default.conf
openclaw/: __init__.py  main.py  setup_wizard.py
openclaw/agent/: __init__.py  brain.py  context.py  orchestrator.py  scheduler.py  swarm.py
openclaw/agent/prompts/: personality.md  system.md  tools.md
openclaw/channels/: __init__.py  base.py  discord.py  telegram.py
openclaw/config/: default.yaml  settings.py
openclaw/gateway/: __init__.py  approval.py  middleware.py  router.py  server.py
openclaw/mcp/: __init__.py  client.py  registry.py  server.py
openclaw/memory/: category_layer.py  evolution.py  item_layer.py  manager.py  resource_layer.py  retrieval.py  vector_store.py
openclaw/memory/backends/: __init__.py  base.py  chromadb_backend.py  (+1 more)
openclaw/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  openai_provider.py  openrouter_provider.py
openclaw/sandbox/: __init__.py  container.py  executor.py
openclaw/security/: __init__.py  secrets.py
openclaw/skills/: __init__.py  base.py  loader.py  router.py
openclaw/tools/: doctor.py  executor.py  repo_map.py
openclaw/tracing/: __init__.py  recorder.py
openclaw/ui/: __init__.py  terminal.py
tests/: test_api_auth.py  test_brain.py  test_context.py  test_discord.py  test_doctor.py  test_gateway.py  test_mcp.py  test_memory.py  test_orchestrator.py  test_providers_new.py  test_sandbox.py  test_scheduler.py  test_secrets.py  test_skills.py  test_sqlite_memory.py  test_swarm.py  test_telegram.py  test_tracing.py  test_workspace.py
(+13 files in other folders)
