[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
dynamic = ["version"]
description = "Autonomous AI Assistant - OpenClaw + MemU + AgentZero"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "NexusMind Contributors" },
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "python-multipart>=0.0.12",
    "rich>=13.9.0",
    "prompt_toolkit>=3.0.48",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "python-dateutil>=2.9.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
ml = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
]
telegram = [
    "python-telegram-bot>=21.0",
]
discord = [
    "discord.py>=2.4.0",
]
providers = [
    "anthropic>=0.39.0",
    "openai>=1.55.0",
]
docker = [
    "docker>=7.0.0",
]
monitoring = [
    "psutil>=6.0.0",
    "watchdog>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]
all = [
    "openclaw[ml,telegram,discord,providers,docker,monitoring]",
]

[project.scripts]
openclaw = "openclaw.main:main"

[tool.setuptools.dynamic]
version = { attr = "openclaw.__version__" }

[tool.setuptools.packages.find]
include = ["openclaw*"]

[tool.setuptools.package-data]
openclaw = [
    "config/*.yaml",
    "agent/prompts/*.md",
    "skills/builtin/*/SKILL.md",
    "ui/web/templates/*.html",
    "ui/web/static/css/*.css",
    "ui/web/static/js/*.js",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
